Use Set.of(x) consistently.