@@ -36,9 +36,9 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.springframework.security.crypto.encrypt.Encryptors.noOpText;
 import java.net.URI;
-import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -91,8 +91,8 @@ public class FroniusCloudIntegrationServiceTests {
 
 	@BeforeEach
 	public void setup() {
-		service = new FroniusCloudIntegrationService(Collections.singleton(datumStreamService),
-				userEventAppenderBiz, encryptor, restOps);
+		service = new FroniusCloudIntegrationService(Set.of(datumStreamService), userEventAppenderBiz,
+				encryptor, restOps);
 
 		ResourceBundleMessageSource msg = new ResourceBundleMessageSource();
 		msg.setBasenames(FroniusCloudIntegrationService.class.getName(),
