@@ -51,9 +51,9 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.random.RandomGenerator;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -140,9 +140,8 @@ public class SmaCloudIntegrationServiceTests {
 
 	@BeforeEach
 	public void setup() {
-		service = new SmaCloudIntegrationService(Collections.singleton(datumStreamService),
-				userEventAppenderBiz, encryptor, integrationDao, rng, restOps, oauthClientManager, clock,
-				null);
+		service = new SmaCloudIntegrationService(Set.of(datumStreamService), userEventAppenderBiz,
+				encryptor, integrationDao, rng, restOps, oauthClientManager, clock, null);
 
 		ResourceBundleMessageSource msg = new ResourceBundleMessageSource();
 		msg.setBasenames(SmaCloudIntegrationService.class.getName(),
