@@ -28,6 +28,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.util.Collections;
+import java.util.Set;
 import java.util.zip.GZIPOutputStream;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
@@ -150,9 +151,8 @@ public class JsonDatumExportOutputFormatService extends BaseDatumExportOutputFor
 				if ( decompressTemp ) {
 					outputResource = new DecompressingResource(outputResource);
 				}
-				return Collections.singleton(
-						new BasicDatumExportResource(new DeleteOnCloseFileResource(outputResource),
-								getContentType(config), getExportContentType()));
+				return Set.of(new BasicDatumExportResource(new DeleteOnCloseFileResource(outputResource),
+						getContentType(config), getExportContentType()));
 			}
 			return Collections.emptyList();
 		}
