@@ -36,6 +36,7 @@ import static org.hamcrest.Matchers.sameInstance;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.Set;
 import java.util.UUID;
 import org.easymock.Capture;
 import org.easymock.EasyMock;
@@ -192,8 +193,7 @@ public class DaoDatumMetadataBizTests {
 		ObjectDatumStreamMetadata streamMeta = new BasicObjectDatumStreamMetadata(UUID.randomUUID(),
 				"UTC", ObjectDatumKind.Node, TEST_NODE_ID, TEST_SOURCE_ID, null, null, null,
 				JsonUtils.getJSONString(meta, null));
-		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor)))
-				.andReturn(Collections.singleton(streamMeta));
+		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor))).andReturn(Set.of(streamMeta));
 
 		NodeSourcePK pk = new NodeSourcePK(TEST_NODE_ID, TEST_SOURCE_ID);
 		GeneralDatumMetadata merged = new GeneralDatumMetadata(meta);
@@ -230,8 +230,7 @@ public class DaoDatumMetadataBizTests {
 		ObjectDatumStreamMetadata streamMeta = new BasicObjectDatumStreamMetadata(UUID.randomUUID(),
 				"UTC", ObjectDatumKind.Node, TEST_NODE_ID, TEST_SOURCE_ID, null, null, null,
 				JsonUtils.getJSONString(meta, null));
-		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor)))
-				.andReturn(Collections.singleton(streamMeta));
+		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor))).andReturn(Set.of(streamMeta));
 
 		NodeSourcePK pk = new NodeSourcePK(TEST_NODE_ID, TEST_SOURCE_ID);
 		GeneralDatumMetadata merged = new GeneralDatumMetadata(meta);
@@ -358,8 +357,7 @@ public class DaoDatumMetadataBizTests {
 		ObjectDatumStreamMetadata streamMeta = new BasicObjectDatumStreamMetadata(UUID.randomUUID(),
 				"UTC", ObjectDatumKind.Location, TEST_LOCATION_ID, TEST_SOURCE_ID, null, null, null,
 				JsonUtils.getJSONString(meta, null));
-		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor)))
-				.andReturn(Collections.singleton(streamMeta));
+		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor))).andReturn(Set.of(streamMeta));
 
 		LocationSourcePK pk = new LocationSourcePK(TEST_LOCATION_ID, TEST_SOURCE_ID);
 		GeneralDatumMetadata merged = new GeneralDatumMetadata(meta);
@@ -396,8 +394,7 @@ public class DaoDatumMetadataBizTests {
 		ObjectDatumStreamMetadata streamMeta = new BasicObjectDatumStreamMetadata(UUID.randomUUID(),
 				"UTC", ObjectDatumKind.Location, TEST_LOCATION_ID, TEST_SOURCE_ID, null, null, null,
 				JsonUtils.getJSONString(meta, null));
-		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor)))
-				.andReturn(Collections.singleton(streamMeta));
+		expect(metaDao.findDatumStreamMetadata(capture(criteriaCaptor))).andReturn(Set.of(streamMeta));
 
 		LocationSourcePK pk = new LocationSourcePK(TEST_LOCATION_ID, TEST_SOURCE_ID);
 		GeneralDatumMetadata merged = new GeneralDatumMetadata(meta);
