@@ -56,7 +56,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Iterator;
 import java.util.List;
@@ -1105,7 +1104,7 @@ public class DaoDatumImportBizTests {
 			}
 		};
 		CompletableFuture<Iterable<Resource>> storageListingFuture = CompletableFuture
-				.completedFuture(Collections.singleton(r));
+				.completedFuture(Set.of(r));
 		expect(resourceStorageService.listResources(dataFile.getName())).andReturn(storageListingFuture);
 
 		expect(resourceStorageService.getUid()).andReturn("Magic Storage").anyTimes();
@@ -1144,7 +1143,7 @@ public class DaoDatumImportBizTests {
 
 		loadingContext.close();
 
-		Set<String> deletedResourcePaths = Collections.singleton("Yeah, baby!");
+		Set<String> deletedResourcePaths = Set.of("Yeah, baby!");
 		Capture<Iterable<String>> deleteResourcePathsCaptor = new Capture<>();
 		expect(resourceStorageService.deleteResources(capture(deleteResourcePathsCaptor)))
 				.andReturn(CompletableFuture.completedFuture(deletedResourcePaths));
@@ -1433,7 +1432,7 @@ public class DaoDatumImportBizTests {
 
 		// when
 		replayAll();
-		Set<String> jobIds = Collections.singleton(uuid.toString());
+		Set<String> jobIds = Set.of(uuid.toString());
 		Collection<DatumImportStatus> results = biz.deleteDatumImportJobsForUser(TEST_USER_ID, jobIds);
 
 		assertThat("Queried states", statesCaptor.getValue(),
@@ -1463,7 +1462,7 @@ public class DaoDatumImportBizTests {
 
 		// when
 		replayAll();
-		Set<String> jobIds = Collections.singleton(uuid.toString());
+		Set<String> jobIds = Set.of(uuid.toString());
 		Collection<DatumImportStatus> results = biz.deleteDatumImportJobsForUser(TEST_USER_ID, jobIds);
 
 		assertThat("Queried states", statesCaptor.getValue(),
