@@ -39,8 +39,8 @@ import java.math.BigInteger;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -240,7 +240,7 @@ public class JdbcDatumEntityDao_GenericDaoTests extends BaseDatumJdbcTestSupport
 				new String[] { "wattHours", "wh" },
 				new String[] { "limits", "opState", "opStates", "faults" });
 
-		DatumDbUtils.insertObjectDatumStreamMetadata(log, jdbcTemplate, Collections.singleton(meta));
+		DatumDbUtils.insertObjectDatumStreamMetadata(log, jdbcTemplate, Set.of(meta));
 
 		GeneralNodeDatum datum = loadJsonDatumResource("test-datum-37.txt", getClass()).get(0);
 
