@@ -27,7 +27,6 @@ import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.UUID;
@@ -107,7 +106,7 @@ public class DaoUserExportTaskBiz implements UserExportTaskBiz {
 			String pattern) {
 		if ( sources == null || sources.isEmpty() || pathMatcher == null || pattern == null
 				|| !pathMatcher.isPattern(pattern) ) {
-			return (pattern == null || pattern.isEmpty() ? sources : Collections.singleton(pattern));
+			return (pattern == null || pattern.isEmpty() ? sources : Set.of(pattern));
 		}
 		Set<String> result = new LinkedHashSet<>(sources);
 		result.removeIf(source -> !pathMatcher.match(pattern, source));
